Revising ZVP chapter

--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -4,20 +4,21 @@
 \section{Motivations and an overview}
 % TODO: \textbf{**This is from paper cover letter and acts as an abstract for this chapter, I also need to go through and add citations**}
 
-Throughout the history of experimental science, light has been the primary tool for investigation. Through the creation of synchrotron radiation sources and more recently XFELs, electron bunches have been used to create increasingly specialised light sources for the study of matter of all kinds. At Diamond Light Source in the UK, electron beams have been used for a diverse range of studies from new drugs to ancient paintings, while at SLAC, the United States' forefront electron accelerator, common applications hail from many disciplines: science, medicine, industry and homeland security.  Hence, much research has been done to produce electron bunches with ever greater charge, energy and coherency. Multi-petawatt laser facilities are now available across the globe for the study of laser-plasma interactions at ever greater peak intensities. In the ultra-relativistic regime $a_0 \gg 1$, there is a novel method for high-charge electron bunch creation. Via relativistic effects, a laser pulse organises the electrons at the surface of a solid density plasma into coherent bunches, which are then ejected at high speeds. Those discussed in this thesis have properties rivalling those of forefront accelerators. The quality, charge and duration of the attosecond electron bunches described here would enable the study of the most fundamental interactions of our universe. Electron bunch formation from solid targets has received much interest in recent years \cite{kulaginCharacteristicsRelativisticElectron2009, huEnhancedDenseAttosecond2015, cantonoExtensiveStudyElectron2018, serebryakovNearsurfaceElectronAcceleration2017, zhangGiantIsolatedAttosecond2020, hornyGenerationSingleAttosecond2021, ongElectronTransportNanowire2021, kulaginSubrelativisticInfraredTerahertz2021} with some experimental evidence for attosecond electron bunches from intense laser-solid interactions \cite{linIsolatedAttosecondElectron2020, cardenasSubcycleDynamicsRelativistic2019, thevenetVacuumLaserAcceleration2016}. This interest is in part due to their production of higher charge bunches at lower intensities compared to gas targets \cite{linIsolatedAttosecondElectron2020}. Here is proposed a new mass-limited target setup to generate electron bunches with greater charge density. Such electron bunches are fully characterised using \ac{PIC} simulations to compare their quality to those of existing electron bunch production methods and their energies described via the Zero Vector Potential Mechanism, alongside the theories of the Relativistic Electron Spring \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Coherent Synchrotron Emission \cite{derbruggeEnhancedRelativisticHarmonics2010}, this is a post-ponderomotive model of attosecond absorption and reflection. This model considers a quasi-static surface equilibrium state analogously to ion acceleration in the hole boring \cite{vincentiOpticalPropertiesRelativistic2014} and light sail regimes \cite{macchiTheoryLightSail2014}. \ac{ZVP} theory has direct relevance to \ac{HHG} due to the known intrinsic link between electron bunches and the reflection mechanism \cite{cousensElectronTrajectoriesAssociated2020, savinAttosecondscaleAbsorptionExtreme2017}. The implications of \ac{ZVP} for laser to plasma energy absorption are also considered including at the onset of \ac{SF-QED} effects. 
+Throughout the history of experimental science, light has always been the primary tool of investigation and discovery. Through the creation of synchrotron radiation sources and more recently XFELs, electron bunches have been employed to create increasingly specialised light sources for the study of matter of all kinds. At SLAC, the United States' forefront electron accelerator, applications hail from many disciplines: science, medicine, industry and homeland security. At Diamond Light Source, the UK's national synchrotron science facility, studies range from novel drugs to ancient paintings. Unsurprisingly, extensive research efforts have been enlisted to produce electron bunches of ever greater charge, energy and coherency. 
+Multi-petawatt laser facilities are now available across the globe for the study of laser-plasma interactions in the ultra-relativistic regime $a_0 \gg 1$. Here, there is a novel method for high-charge electron bunch creation. Via relativistic effects, a laser pulse organises the electrons at the surface of a solid density plasma into coherent bunches that can be ejected at high speeds. Those discussed in this thesis have properties comparable to those of forefront accelerators but on ultra-short timescales. The quality, charge and duration of the attosecond electron bunches described here would enable the study of the most fundamental interactions of our universe. Electron bunch formation from solid targets has received much interest in recent years \cite{kulaginCharacteristicsRelativisticElectron2009, huEnhancedDenseAttosecond2015, cantonoExtensiveStudyElectron2018, serebryakovNearsurfaceElectronAcceleration2017, zhangGiantIsolatedAttosecond2020, hornyGenerationSingleAttosecond2021, ongElectronTransportNanowire2021, kulaginSubrelativisticInfraredTerahertz2021} with some experimental evidence for attosecond electron bunches from intense laser-solid interactions \cite{linIsolatedAttosecondElectron2020, cardenasSubcycleDynamicsRelativistic2019, thevenetVacuumLaserAcceleration2016}. This interest stems partially from their ability to produce higher charge bunches at lower intensities compared to gas targets \cite{linIsolatedAttosecondElectron2020}. Here is proposed a new mass-limited target setup to generate electron bunches of extreme charge density. These electron bunches are fully characterised in 3D \ac{PIC} simulations to compare their quality to those of existing electron bunch production methods. Their energies are described via an extended version of the \ac{ZVP} Mechanism and the corresponding implications for laser to plasma energy absorption are also considered including the intersection of \ac{ZVP} with \ac{SF-QED} effects of next generation laser facilities. \ac{ZVP} theory has direct relevance to \ac{HHG} due to the known intrinsic link between electron bunches and the reflection mechanism \cite{cousensElectronTrajectoriesAssociated2020, savinAttosecondscaleAbsorptionExtreme2017}.
 
-These results have excited the community to perform experiments to realise these electron bunches for the creation of ultra-bright X-ray pulses: having recently completed an experimental campaign at the ORION laser facility, studying high harmonic generation from such electron bunches, the author's proposal has been accepted to observe the electron bunches directly at the GEMINI PW laser at the Central Laser Facility, UK.
+These results have excited the community to perform experiments to realise these electron bunches for the creation of ultra-bright X-ray pulses: after the recent successful campaign at the ORION laser facility, studying \ac{HHG} from such electron bunches, details are presented here for the upcoming experiment to observe the electron bunches directly at the GEMINI PW laser at the Central Laser Facility, UK.
 
-This chapter is organised as follows. Section \ref{sec:zvp-intro} is an introduction to the \ac{ZVP} mechanism including quantitative calculations of system properties, then in section \ref{sec:zvp-3Dsimulations} the first 3D PIC simulations to observe the ZVP mechanism are presented. Further PIC simulations are presented in section \ref{sec:zvp-bunches} focusing now on the hot electron bunches produced via the mechanism. The planned experiment to observe the ZVP mechanism at the GEMINI-PW laser facility is discussed in section \ref{sec:zvp-future_work} including details on preparations that must be taken and finally concluding remarks are presented in section \ref{sec:zvp-conclusion}.
+This Chapter is organised as follows. Section \ref{sec:zvp-intro} outlines the \ac{ZVP} mechanism including quantitative calculations of system properties. In Section \ref{sec:zvp-3Dsimulations} the first 3D PIC simulations to observe the ZVP mechanism are presented. Further PIC simulations are presented in Section \ref{sec:zvp-bunches} focusing now on the hot electron bunches produced via the mechanism their properties, energy scalings and implications for \ac{SF-QED}. Section \ref{sec:zvp-future_work} details the planned experiment to observe the ZVP mechanism at the GEMINI-PW laser facility including. Finally, concluding remarks are given in Section \ref{sec:zvp-conclusion}.
 
 \section{Introduction}\label{sec:zvp-intro}
-Of primary interest in this thesis is the interaction of a relativistically intense short-pulse laser interacting with a solid density plasma target with a sharp density gradient. Now is presented an explanation for this interaction: the \ac{ZVP} mechanism of attosecond absorption of laser pulse energy, proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. 
+Of primary interest in this thesis is the interaction of a relativistically intense short-pulse laser interacting with a solid density plasma target with a sharp density gradient. Now is presented one model for the interaction: the \ac{ZVP} mechanism as proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. Alongside the theories of the Relativistic Electron Spring \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Coherent Synchrotron Emission \cite{derbruggeEnhancedRelativisticHarmonics2010}, \ac{ZVP} is a post-ponderomotive model of attosecond absorption and reflection. The model considers a quasi-static surface equilibrium state analogously to ion acceleration in the hole boring \cite{vincentiOpticalPropertiesRelativistic2014} and light sail regimes \cite{macchiTheoryLightSail2014}.
 
 % TODO: At some point I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. ALso in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected and hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point I also want to discuss preplasmas.
 
-Theory for laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, via a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the `post-ponderomotive' regime where the frequency of the relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, working through this condition suggests the criterion for the \ac{ZVP} regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The resolution comes from understanding the plasma response. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser is able to compress the front surface to densities such that the overdensity condition is satisfied, provided the target is of sufficient thickness. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in the following chapter. In short, the technology exists to control this phenomenon. 
+An explanation for the absorption of laser energy into dense plasmas was first suggested by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}. A ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the so-called `post-ponderomotive' regime where the frequency of relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, this condition suggests a criterion for the \ac{ZVP} regime, $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser will typically compress the front surface to densities such that the overdensity condition is satisfied, provided the target is of sufficient thickness. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in the following chapters. For now, assume the technology exists to control this phenomenon. 
 
-Provided all conditions are met, the ponderomotive pressure of the laser pulse compresses the electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving in its wake a positive space charge. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field. Having entered a regime of adiabaticity, the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure of the laser pulse and the Coulomb potential of the pseudocapacitor field. Thus is formed a high density and spatially thin electron bunch (sometimes referred to as an electron sheath in the literature \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}) at the plasma surface.
+Provided all conditions are met, the ponderomotive pressure of the laser pulse compresses electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving in its wake a positive space charge of ions. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field. Having entered a regime of adiabaticity, the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure of the laser pulse and the Coulomb potential of the pseudocapacitor field. Thus is formed a high density and longitudinally thin electron bunch (sometimes referred to as an electron sheath in the literature \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}) at the plasma surface.
 
 To understand this system, consider now a relativistic linearly polarised laser pulse obliquely incident, at an angle of incidence $\theta$, on a semi-infinite plasma, existing for $x\ge0$ as in figure \ref{fig:zvpforcesppol}.
 
@@ -42,11 +43,11 @@ Explicitly, the Hamiltonian can be written as
 \begin{equation}\label{eq:hamiltonian_specific}
 	\mathcal{H} = c\sqrt{m^2_ec^2 + p^2_\mathrm{prop} + e^2A^2} - e\Phi.
 \end{equation}
-From equation \ref{eq:hamiltonian_specific} it is clear that should the vector potential pass through zero, one of the walls of the potential well is totally suppressed, allowing electrons in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeros for this violent reconstruction of the plasma surface led Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} to coin the term `Zero Vector Potential' mechanism to describe this process. Indeed, while elementary electromagnetism tells us a laser pulse will exponentially decay within a skin layer of a plasma without passing through zero, Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} were able to demonstrate in \ac{PIC} simulations that for this regime, zeros do exist and do propagate through the skin layer in this non-linear regime. The explanation relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma surface, and the mathematical formalism of this process proceeds as follows.
+From equation \ref{eq:hamiltonian_specific} it is clear that should the vector potential pass through zero, one of potential well walls is totally suppressed, enabling electrons in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeros for this violent reconstruction of the plasma surface led Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} to coin the term `Zero Vector Potential' mechanism to describe this process. Indeed, while elementary electromagnetism tells us a laser pulse will exponentially decay within a skin layer of a plasma without passing through zero, Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} demonstrated in \ac{PIC} simulations that in this non-linear regime, zeros do exist and do propagate through the skin layer. The explanation relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma surface, and a mathematical formalism of this process proceeds as follows.
 
 % TODO: \textbf{**Must also discuss the impact of relativity in creating the observed phenomena, probably at energy scaling section?**}
 
-As the \ac{ZVP} mechanism is a relativistic phenomenon, it is essential to perform a relativistic analysis. Since all electrons are accelerated by the relativistic laser pulse to approximately speed $c$, surface electrons undergo similar trajectories and act collectively, oscillating in the laser pulse field. Consider first a transformation to the frame of reference where the laser pulse is normally incident to the plasma surface, this frame travels at velocity $\mathbf{v} = (c\sin\theta )\hat{\mathbf{y}}$ with electrons streaming at $-\mathbf{v}$. 
+As the \ac{ZVP} mechanism is a relativistic phenomenon, it is absolutely essential to perform a relativistic analysis. Since all accelerated electrons travel at approximately speed $c$, surface electrons undergo similar trajectories. Acting collectively they oscillate in the laser pulse field. Consider first a transformation to the frame of reference where the laser pulse is normally incident to the plasma surface, this frame travels at velocity $\mathbf{v} = (c\sin\theta )\hat{\mathbf{y}}$ with electrons streaming at $-\mathbf{v}$. 
 Using equation \ref{eq:zvp-energy_invariant}, $U = \gamma m_\mathrm{e} c^2$ and integrating equation \ref{eq:intro-transverse_momentum_differential_equation} in the boosted frame noting $p_\mathrm{T}(t=0) = \gamma_\mathbf{v} m_\mathrm{e}v =m_\mathrm{e}c \sin\theta\cos\theta$,
 \begin{equation}
 	\gamma^2 = 1 + (a_0 + \sin\theta\cos\theta)^2 + \left(\frac{p_\mathrm{prop}}{m_\mathrm{e}c}\right)^2,
@@ -55,20 +56,20 @@ where all parameters are in the boosted frame. Using $\mathbf{p} = \gamma m_\mat
 \begin{equation}
 	v_\mathrm{prop} = \frac{\tilde{p}_\mathrm{prop}c}{\sqrt{1 + (a_0 + \sin\theta\cos\theta)^2 + \tilde{p}^2_\mathrm{prop}}},
 \end{equation}
-where $\tilde{p}_\mathrm{prop} = p_\mathrm{prop}/m_\mathrm{e}c$. Thus, should the transverse vector potential pass through $-\sin\theta\cos\theta$, zero for normal incidence, the surface is able to propagate towards the laser pulse at very close to speed $c$. Transforming back to the laboratory frame at the peak of ablation ($\mathbf{u}\approx -c\hat{\mathbf{x}}$) and using the equations for relativistic velocity addition,
+where $\tilde{p}_\mathrm{prop} = p_\mathrm{prop}/m_\mathrm{e}c$. Thus, should the transverse vector potential pass through $-\sin\theta\cos\theta$, zero for normal incidence, the surface can propagate towards the laser pulse at very close to speed $c$. Transforming back to the laboratory frame, at the peak of ablation ($\mathbf{u}\approx -c\hat{\mathbf{x}}$) and using the equations for relativistic velocity addition,
 \begin{equation}\label{eq:zvp_velocityaddition1}
 	\mathbf{u}'_{\|} = \frac{\mathbf{u}-\mathbf{v}}{1- \mathbf{u}\cdot\mathbf{v}/c^2},
 \end{equation}
 \begin{equation}\label{eq:zvp_velocityaddition2}
 	\mathbf{u}'_{\perp} = \frac{\mathbf{u}_\perp}{\gamma_v(1- \mathbf{u}\cdot\mathbf{v}/c^2)},
 \end{equation}
-where $\gamma_v = 1/\sqrt{1-|\mathbf{v}|^2/c^2}$ \cite{steaneRelativityMadeRelatively2012}, one finds that this peak ablation at speed $\approx c$ occurs now in the specular reflection direction. Simultaneity is broken and co-move along the surface with the incident laser pulse wavefronts.
+where $\gamma_v = 1/\sqrt{1-|\mathbf{v}|^2/c^2}$ \cite{steaneRelativityMadeRelatively2012}, one finds that this peak ablation at speed $\approx c$ occurs now in the specular reflection direction. Simultaneity is broken and ripples co-move along the surface with the incident laser pulse wavefronts.
 
 Transform now to the rest frame of the ablating front. Beyond the relativistic critical density surface, the vector potential of the laser pulse decays evanescently. At the spatial centre of the laser pulse, it can be described simply by
 \begin{equation}
 	\mathbf{A}'_\mathrm{L}(t',r') = A'_0\cos(\omega'_\mathrm{L}t')\exp(-r'/\delta')\hat{\mathbf{r}}'_\mathrm{pol}= A'_\mathrm{L}\hat{\mathbf{r}}'_\mathrm{pol},
 \end{equation}
-where the primed symbols indicate that these quantities are measured in the rest frame of the expanding front, $A'_0$ is the vector potential amplitude and $\omega'_\mathrm{L}$ is the frequency of the laser pulse, $r'$ is the propagation distance of the laser into the plasma, $\delta'$ is the skin depth and $\hat{\mathbf{r}}'_\mathrm{pol}$ a unit vector defining the polarisation direction of the laser pulse. Un-primed coordinates will indicate the lab frame measurements.
+where the primed symbols indicate that these quantities are measured in the rest frame of the expanding front. $A'_0$ is the vector potential amplitude and $\omega'_\mathrm{L}$ is the frequency of the laser pulse, $r'$ is the propagation distance of the laser into the plasma, $\delta'$ is the skin depth and $\hat{\mathbf{r}}'_\mathrm{pol}$ a unit vector defining the polarisation direction of the laser pulse. Un-primed coordinates will indicate the lab frame measurements.
 
 % TODO PIC simulation of surface ripples?
 
@@ -126,12 +127,15 @@ The oscillatory term in equation \ref{eq:zvp_labAfull} demonstrates the propagat
 \begin{equation}\label{eq:zvp-zero_v}
 	v_\phi = \frac{\omega_L}{k} = \frac{c}{\beta} = -\frac{c^2}{v_\mathrm{f}}.
 \end{equation}
-While in their original ZVP paper Baeva laid some doubt on their version of this calculation, instead suggesting similarity theory predicts zeroes propagate at speed $c$ \cite{baevaZeroVectorPotential2011}, the theory of High Harmonic Generation rejects this alternative. It is well known that the emission of reflected radiation occurs primarily at the point where the transverse vector potential passes through zero \cite{cousensElectronTrajectoriesAssociated2020} but equally that the width of the radiated pulse depends on the advance time emission point \cite{edwardsXRayEmissionEffectiveness2020}. If the zeroes moved at speed $c$, then the observed emitted pulse would be infinitely thin, producing radiation with excellent coherency in all cases. In practice however, simulations have suggested advanced time bunch widths are finite with the width reducing as the laser intensity is increased \cite{edwardsXRayEmissionEffectiveness2020}. This is precisely what is predicted by equation \ref{eq:zvp-zero_v}, as the laser intensity increases, $v_\mathrm{f}$ increases and thus the zeroes propagate closer to the speed of light, reducing the advanced time bunch width.
+While in their original ZVP paper Baeva laid some doubt on their version of this calculation, instead suggesting similarity theory predicts zeroes propagate at speed $c$ \cite{baevaZeroVectorPotential2011}, the theory of High Harmonic Generation rejects this alternative. It is well known that the emission of reflected radiation occurs primarily at the point where the transverse vector potential passes through zero \cite{cousensElectronTrajectoriesAssociated2020} but equally that the width of the radiated pulse depends on the advance time emission point \cite{edwardsXRayEmissionEffectiveness2020}. If the zeroes moved at speed $c$, then the observed emitted pulse would be infinitely thin, producing radiation with perfect coherence in all cases. In practice however, simulations have suggested advanced time bunch widths are finite and decreasing with increasing laser intensity \cite{edwardsXRayEmissionEffectiveness2020}. This is precisely what is predicted by equation \ref{eq:zvp-zero_v}. As the laser intensity increases, $v_\mathrm{f}$ naturally increases and thus the zeroes propagate closer to the speed of light, reducing the advanced time bunch width.
 
-To summarise, for a sufficiently intense laser pulse, electrons on the radiated surface of a solid target are accelerated by the laser to relativistic velocities at a fraction of a laser pulse cycle and therefore electrons both follow similar trajectories and are able to respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force of the laser pulse. They form into a high charge density spatially thin coherent electron bunch on the front surface of the plasma but displaced inwards from the approximately immobile ions via the ponderomotive pressure of the laser. This charge separation generates a longitudinal electrostatic pseudocapacitor field that confines electrons to a potential well on the front surface of the plasma, preventing further propagation of the electron bunch into the plasma bulk. When the zero of the vector potential passes through the electron bunch, the ponderomotive pressure instantaneously vanishes and electrons are ejected specularly from the target, copropagating with the zeroes and gaining energy as they discharge the pseudocapacitor field. The electron bunch is then rotated by the laser pulse and launched into the bulk at high energy, as it does so emitting coherent synchrotron radiation in transmission and reflection.
+After expulsion from the plasma alongside zeroes of the vector potential they release CSE, then they accelerate and they they are rotated back.
+
+
+To summarise, for a sufficiently intense laser pulse, electrons at the surface of an irradiated solid target are accelerated by the laser to relativistic velocities at a fraction of a laser pulse cycle and therefore electrons both follow similar trajectories and respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force of the laser pulse. They form into a high charge density spatially thin coherent electron bunch on the front surface of the plasma but displaced inwards from the approximately immobile ions via the ponderomotive pressure of the laser. This charge separation generates a longitudinal electrostatic pseudocapacitor field that confines electrons to a potential well on the front surface of the plasma, preventing further propagation of the electron bunch into the plasma bulk. When the zero of the vector potential passes through the electron bunch, the ponderomotive pressure instantaneously vanishes and electrons are ejected specularly from the target, co-propagating with the zeroes of the vector potential and gaining energy as they discharge the pseudocapacitor field. The electron bunch is then rotated by the laser pulse and launched into the bulk at high energy, as it does so emitting coherent synchrotron radiation in transmission and reflection.
 
 \subsection{ZVP electron bunch energies}\label{sec:zvp_energies_derivation}
-In \cite{baevaZeroVectorPotential2011}, Baeva \textit{et al} propose energy scalings for electron bunches produced in the \ac{ZVP} regime as a function of the incident laser pulse intensity and plasma density. Later this was then extended to \ac{3D} by Savin \textit{et al} \cite{savinAttosecondscaleAbsorptionExtreme2017}. What follows is that discussion with closer consideration of both the constants of proportionality and their consequences.
+In \cite{baevaZeroVectorPotential2011}, Baeva \textit{et al} propose energy scalings for electron bunches produced in the \ac{ZVP} regime as a function of the incident laser pulse intensity and plasma density. Later this was then extended to \ac{3D} by Savin \textit{et al} \cite{savinAttosecondscaleAbsorptionExtreme2017}. What follows is that discussion with closer consideration of both the constants of proportionality and their consequences. Note that throughout the electron bunch is treated as infinitessimally thin, as proved to be a reasonable assumption in previous work on ZVP \cite{baevaTheoryHighorderHarmonic2006, savinAttosecondscaleAbsorptionExtreme2017, savinEnergyAbsorptionLaserQED2019}. Sub-bunch dynamics have been explored in more detail by Gonoskov \textit{et al} \cite{gonoskovTheoryRelativisticRadiation2018}.
 
 Consider again the semi-infinite block of plasma presented in figure \ref{fig:introplasmafrequency}, normally irradiated by a laser pulse with wavelength $\lambda_\mathrm{L}$ and peak electric field, $E_\mathrm{L}$. It is now the ponderomotive pressure of the laser that displaces the electron fluid. The electron surface moves inwards until the pressure exerted by the peak instantaneous ponderomotive pressure of the laser pulse cycle,
 \begin{equation}
@@ -347,7 +351,6 @@ Further simulation results a presented in figure \ref{fig:zvp3ddynamics}.
 In figures \ref{fig:zvp3ddynamics}a)-d), comparisons are made in the electron energy distributions for simulations with zeros present in the vector potential (linearly polarised) and without (circularly polarised). Clearly zeroes are required for the formation of high energy, short duration attosecond bunches. From figure \ref{fig:zvp3ddynamics}a) it is clear that electron bunches are injected and propagate through the plasma bulk in the laser propagation direction. Figure \ref{fig:zvp3ddynamics}c) demonstrates the quasi-monoenergeticity of the high energy electron bunches as initially identified in 1D by Baeva. Although the shape in the phase space is more complex in 3D, the attosecond duration at a given energy is retained. Figures \ref{fig:zvp3ddynamics}e) and f) describe the surface dynamics. One can observe the high density bunches on the front surface with the peak in energy density occuring after acceleration across the pseudocapacitor. Figure \ref{fig:zvp3ddynamics}f) also explains the shape of the spectrum of figure \ref{fig:zvp3ddynamics}c), low energy electrons are turned back first and as all bunch electrons are ultrarelativistic, the higher energy electrons trail behind.
 
 Finally, figure \ref{fig:zvphhgbeamfourier} compares the spectra of the reflected light in the presence and absence of zeros of the vector potential.
-
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{figures/zvp/zvp_hhg_beam_fourier}
@@ -357,7 +360,6 @@ Finally, figure \ref{fig:zvphhgbeamfourier} compares the spectra of the reflecte
 Unfortunately the simulation resolution is too low to resolve the individual harmonics however, the spectrum from the circularly polarised light is typically over two orders of magnitude below that for linearly polarised light. Thus, all defining characteristics of the ZVP mechanism have been identified in 3D simulations with the notable exception of the energy scalings. Next generation supercomputers will be required to perform such parameter scans.
 
 % TODO: \textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on y axis, also need to convert from timstep to time. D) needs teh scale changing. also the x axis needs converting to distance. Also to do I need to change the colour of that FFT graph**}
-
 
 \section{The ZVP electron bunch}\label{sec:zvp-bunches}
 Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the interaction further. Previous work on the ZVP mechanism has highlighted the high energy and short duration of electron bunches, now full characterisation of such bunches is performed. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size,when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant stretching of the bunch in time as can be seen in figure \ref{fig:zvp3d}. Such electron bunches retain their high charge density and ultra-short duration. ZVP electron bunches can therefore be placed into two categories: ultra-high charge, ultra-short duraction electron bunches from mass-limited targets, hereafter labelled mass-limited electron bunches, of interest due to their unique properties, and bulk propagating bunches, hereafter labelled bulk bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime. To investigate these two bunch types further, 2D PIC simulations were performed, see appendix for parameters.
@@ -546,7 +548,7 @@ Preparations are now underway. The requirements for this experiment are simple: 
 	\caption[Planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches.]{A simulation of the planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches. This novel setup enables the simultaneous measurement of attosecond ZVP electron bunches and their coherent emission of X-ray light. The GEMINI-PW laser pulse is incident at \qty{45}{\degree} on the low density polyethylene target with a preplasma scale length of $0.2\lambda_\mathrm{L}$. For this angle of incidence, transmitted bunches and specularly reflected X-ray harmonics are produced at a frequency of $\omega_\mathrm{L}$.}
 	\label{fig:experimentsetuphhgbunches2}
 \end{figure}
-By focusing the laser onto the edge of a transversely mass-limited target, the emitted electron bunch energies will be maximised. Simulations suggest it should be possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond ZVP electron bunches that produce it. Directly linking the bunch qualities to the properties of the \ac{HHG}. 
+By focusing the laser onto the edge of a transversely mass-limited target, the emitted electron bunch energies will be maximised. Simulations suggest it should be possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond ZVP electron bunches that produce it. Directly linking the bunch qualities to the properties of the \ac{HHG}. Note via equations \ref{eq:zvp_N} and \ref{eq:zvp_T}, the low density target of Figure \ref{fig:experimentsetuphhgbunches2} will produce larger and more energetic bunches. They are therefore a more practical choice for the experiment relative to the aluminium targets of previous sections
 
 Remaining actions include the performance of PIC code simulation parameter scans in the new geometry. While normal incidence was most convenient for these initial simulations, oblique incidence is more optimal for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and as can be understood from equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions for the ZVP mechanism at oblique incidence. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary, therefore, to test the new predictions for oblique incidence energy scalings and total electron bunch charge as well as the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG} given the intrinsic link between the two. \textbf{CITE THESE}. 
 
